concord_macros/tests/dsl/fail/fail_duplicate_behavior_same_site_mixed_list.stderr
error: duplicate behavior `read` at this attachment site
  --> tests/dsl/fail/fail_duplicate_behavior_same_site_mixed_list.rs:13:22
   |
13 |             behavior read
   |                      ^^^^
